--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,19 @@
 .mosquito1 {
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
+}
+
+.mosquito2 {
+    width: 60px;
+    height: 60px;
+}
+
+.mosquito3 {
+    width: 85px;
+    height: 85px;
+}
+
+.mosquito4 {
+    width: 100px;
+    height: 100px;
 }
