--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+body {
+    background-image: url(../img/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
 .mosquito1 {
     width: 30px;
     height: 30px;
@@ -24,4 +30,28 @@
 
 .ladoB {
     transform: scaleX(-1);
+}
+
+.painel {
+    position: absolute;
+    width: 345px;
+    padding: 10px;
+    left: 3px;
+    bottom: 3px;
+    border: solid 2px #000000;
+    background-color: #fff;
+    opacity: 0.7;
+}
+
+.vidas {
+    padding: 10px 10px 5px 10px;
+    float: left;
+}
+
+.cronometro {
+    padding: 5px 10px 0px 10px;
+    font-family: "Consolas", "Arial", "Helvetica", sans-serif;
+    float: left;
+    font-size: 30px;
+    font-weight: bold;
 }
